--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        html, body, canvas {
+            overflow: hidden;
+            padding: 0;
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
     <canvas id="game"></canvas>
+    <script src="game.js"></script>
 </body>
 </html>
