Simplex noise swaying and closeness drawing

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             background-color: black;
         }
     </style>
+    <script src="vendor/perlin-noise-simplex.js"></script>
 </head>
 <body>
     <canvas id="game"></canvas>
