--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Ocean Breeze</title>
     <style>
+        .hide {
+            opacity: 0 !important;
+            transition: opacity 0.5s;
+        }
         html, body, canvas {
             overflow: hidden;
             padding: 0;
@@ -23,6 +27,9 @@
         .launch-modal.outer {
             background-color: rgba(255, 255, 255, 0.4);
             position: absolute;
+
+            opacity: 1;
+            transition: opacity 0.4s;
         }
         .launch-modal.inner {
             display: flex;
@@ -30,9 +37,12 @@
             align-items: stretch;
             background-color: rgba(0, 0, 0, 0.2);
             width: 40%;
-            min-height: 40%;
             min-width: 700px;
+            max-width: 900px;
             border-radius: 15px;
+
+            opacity: 1;
+            transition: opacity 0.4s;
         }
         .launch-modal .vertical-section {
             display: flex;
@@ -114,7 +124,13 @@
             <span class="vertical-section right-column">
                 <div class="instructions">
                     <header>How to play</header>
-                    <p>Use the WASD keys to move.</p>
+                    <ul>
+                        <li>Use the <strong>Up</strong> and <strong>Down</strong> keys to <em>move vertically</em>.</li>
+                        <li>Use the <strong>Left</strong> and <strong>Right</strong> keys to <em>control the sail</em>.</li>
+                        <li>Avoid <em>rocks</em>.</li>
+                        <li>Sail <em>as far as you can</em>!</li>
+                    </ul>
+                    <p><strong>Tip:</strong> Pay attention to the <em>breeze</em>; its direction and strength affect how sailing works.</p>
                 </div>
                 <div class="launch-button-container">
                     <button id="launch-button">Set sail!</button>
