--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         .hide {
             opacity: 0 !important;
             transition: opacity 0.5s;
+            pointer-events: none;
         }
         html, body, canvas {
             overflow: hidden;
